--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build-parser": "nearleyc grammar.ne -o grammar.js",
-    "test": "npm run build-parser && node test_runner.js"
+    "test": "node test_runner.js"
   },
   "dependencies": {
     "moo": "^0.5.2",
