--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Run tests
         id: run-tests
         run: npm test
@@ -35,3 +38,4 @@ jobs:
       - name: Check test step outcome
         if: steps.run-tests.outcome == 'failure'
         run: exit 1
+
