--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,11 @@
-name: Run Hi Tests
-
 on:
   push:
     branches:
       - main
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
@@ -38,4 +40,3 @@ jobs:
       - name: Check test step outcome
         if: steps.run-tests.outcome == 'failure'
         run: exit 1
-
