Feat: Replace Nearley with Chevrotain and remove build script

--- a/package.json
+++ b/package.json
@@ -7,14 +7,10 @@
     "hi2js": "./cli.js"
   },
   "scripts": {
-    "build-parser": "npx nearleyc grammar.ne -o grammar.js",
     "test": "node test_runner.js"
   },
   "dependencies": {
-    "moo": "^0.5.2",
-    "nearley": "^2.20.1"
+    "chevrotain": "^11.0.3"
   },
-  "devDependencies": {
-    "nearley": "^2.20.1"
-  }
+  "devDependencies": {}
 }
